subsets/2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout
