subsets/3-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
  namespace: demo
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - "frontend.localdev.me"
  -  istio-rollout
  http:
  - name: primary
    route:
    - destination:
        host: istio-rollout
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: istio-rollout
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0
