subsets/4-destr.yml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
  namespace: demo
spec:
  host: istio-rollout.demo.svc.cluster.local
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: istio-rollout
      rollouts-pod-template-hash: canary
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: istio-rollout
      rollouts-pod-template-hash: stable
